--- a/src/styles/MONITORING.css
+++ b/src/styles/MONITORING.css
@@ -56,3 +56,117 @@
 .view-icon.MuiSvgIcon-root:hover {
     cursor: pointer;
 }
+
+/* dashboard-page */
+.dashboard-page {
+    box-sizing: border-box;
+    position: fixed;
+    top: 87px;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #606472;
+    display: grid;
+    grid-template-columns: 240px auto;
+}
+
+.monitoring-nav {
+    background-color: #2E3240;
+    padding: 32px 16px;
+    color: white;
+    font-size: 16px;
+}
+
+.monitoring-nav .MuiList-root {
+    margin: 0;
+    padding: 0;
+}
+
+.monitoring-nav .MuiTypography-root {
+    list-style: none;
+    box-sizing: border-box;
+    border-radius: 4px;
+    font-size: 16px;
+}
+
+.monitoring-nav .MuiListItemText-root {
+    list-style: none;
+    box-sizing: border-box;
+    padding: 8px 16px;
+}
+
+.monitoring-nav .MuiButtonBase-root  {
+    list-style: none;
+    box-sizing: border-box;
+    padding: 8px 16px;
+    border-radius: 4px;
+}
+
+.monitoring-nav .inner-menu .MuiButtonBase-root {
+    padding-left: 32px;
+}
+
+.monitoring-content {
+    max-width: 1080px;
+    padding: 32px;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+}
+
+.monitoring-content .title {
+    font-size: 34px;
+    color: white;
+    margin: 0;
+    height: 40px;
+}
+
+.overview-content {
+    display: flex;
+    gap: 40px;
+}
+
+.chart-container {
+    background-color: #2E3240;
+    border: 1px solid #ABAFBD;
+    border-radius: 8px;
+    padding: 20px 20px 40px 20px;
+}
+
+.chart-container .chart-title {
+    color: white;
+    padding: 0 4px 12px 4px;
+    margin: 0;
+    border-bottom: 1px solid #474B59;
+    font-size: 24px;
+}
+
+.apexcharts-legend-series {
+    margin: 5px 8px !important;
+    display: flex !important;
+    gap: 8px;
+}
+
+.apexcharts-legend {
+    flex-direction: column;
+}
+
+.apexcharts-legend-marker {
+    display: block !important;
+    width: 12px;
+}
+
+.apexcharts-legend-text {
+    width: 100%;
+    display: flex;
+    gap: 8px;
+    font-size: 14px !important;
+}
+
+.legend-item-label {
+    width: 100%;
+}
+
+.apexcharts-graphical {
+    display: block;
+}
