--- a/src/styles/MONITORING.css
+++ b/src/styles/MONITORING.css
@@ -2,49 +2,92 @@
 .cluster-list-page {
     box-sizing: border-box;
     position: fixed;
-    top: 87px;
+    top: 67px;
     left: 0;
     width: 100%;
     height: 100%;
     padding: 40px 100px;
     margin: 0;
-    background: #151927;
+    background: #2E3240;
     display: flex;
     flex-direction: column;
-    align-items: end;
+    align-items: center;
     font-size: 20px;
 }
 
+.cluster-list-header, .cluster-list {
+    max-width: 1200px;
+}
+
+.cluster-list-header {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    align-items: center;
+    height: 28px;
+    padding-bottom: 12px;
+    border-bottom: 1px solid #474B59;
+}
+
+.cluster-list-title {
+    color: white;
+    font-size: 24px;
+}
+
 .new-cluster-button {
-    border: none;
-    background: transparent;
-    color: #019CF6;
-    font-weight: bolder;
-    padding: 0;
+    color: white;
+    background-color: #474B59;
+    border: 1px solid #797D8B;
+    padding: 6px 12px;
+    font-size: 14px;
+    width: 74px;
+    height: 28px;
 }
 
 .cluster-list {
     width: 100%;
+    margin: 24px 0;
 }
 
 .cluster-list ul{
     padding: 0;
+    margin: 0;
 }
 
 .cluster-list li {
+    box-sizing: border-box;
     list-style: none;
-    border-bottom: 2px solid white;
-    padding: 0;
-    height: 70px;
-    margin: 30px 0;
+    display: grid;
+    grid-template-columns: 5fr 3fr 3fr 1fr;
+    padding: 16px;
+    height: 60px;
     color: white;
-    display: flex;
     justify-content: space-between;
     align-items: center;
+    font-size: 16px;
+    font-weight: lighter;
+}
+
+.cluster-list li:first-child {
+    background-color: #222634;
+    border-radius: 4px;
+}
+
+.cluster-list li:not(:first-child) {
+    border-bottom: 1px solid #606472;
+}
+
+.cluster-list li:not(:first-child):hover {
+    background-color: #222634;
 }
 
 .cluster-list li span {
     font-weight: bolder;
+    text-align: center;
+}
+
+.cluster-list li span:first-child {
+    text-align: left;
 }
 
 .view-icon.MuiSvgIcon-root {
@@ -61,7 +104,7 @@
 .dashboard-page {
     box-sizing: border-box;
     position: fixed;
-    top: 87px;
+    top: 67px;
     left: 0;
     width: 100%;
     height: 100%;
