--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 #root {
   max-width: 1280px;
-  font-family: "Do Hyeon", sans-serif;
+  font-family: "Abel", sans-serif !important;
   font-weight: 400;
   font-style: normal;
 
