--- a/src/styles/MONITORING.css
+++ b/src/styles/MONITORING.css
@@ -1,3 +1,34 @@
+/* Nodes */
+
+.moni-dashboard-nodes{
+    width: calc((100vw - 80px) / 100 * 75);
+}
+
+.moni-dashboard-nodes > div > table > thead > tr > th:first-child {
+    border-radius: 5px 0 0 5px;
+}
+
+.moni-dashboard-nodes > div > table > thead > tr > th:last-child {
+    border-radius: 0 5px 5px 0;
+}
+
+.moni-dashboard-nodes > div > table > thead > tr > th {
+    color: #ffffff;
+    border-bottom: 0;
+    background: #222634;
+}
+
+.moni-dashboard-nodes > div > table > tbody > tr > th {
+    color: #dde1ef !important;
+    border-bottom-color: #606472 !important;
+}
+
+.moni-dashboard-nodes > div > table > tbody > tr > td {
+    color: #dde1ef !important;
+    border-bottom-color: #606472 !important;
+    text-align: -webkit-center;
+}
+
 /* ClusterList */
 .cluster-list-page {
     box-sizing: border-box;
@@ -18,7 +49,7 @@
 .new-cluster-button {
     border: none;
     background: transparent;
-    color: #019CF6;
+    color: #019cf6;
     font-weight: bolder;
     padding: 0;
 }
@@ -27,7 +58,7 @@
     width: 100%;
 }
 
-.cluster-list ul{
+.cluster-list ul {
     padding: 0;
 }
 
@@ -48,7 +79,7 @@
 }
 
 .view-icon.MuiSvgIcon-root {
-    color: #019CF6;
+    color: #019cf6;
     font-size: 2em;
     padding-bottom: 5px;
 }
@@ -71,7 +102,7 @@
 }
 
 .monitoring-nav {
-    background-color: #2E3240;
+    background-color: #2e3240;
     padding: 32px 16px;
     color: white;
     font-size: 16px;
@@ -95,7 +126,7 @@
     padding: 8px 16px;
 }
 
-.monitoring-nav .MuiButtonBase-root  {
+.monitoring-nav .MuiButtonBase-root {
     list-style: none;
     box-sizing: border-box;
     padding: 8px 16px;
@@ -112,6 +143,7 @@
     display: flex;
     flex-direction: column;
     gap: 40px;
+    height: 100%;
 }
 
 .monitoring-content .title {
@@ -124,11 +156,16 @@
 .overview-content {
     display: flex;
     gap: 40px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: flex-start;
+    
 }
 
 .chart-container {
-    background-color: #2E3240;
-    border: 1px solid #ABAFBD;
+    background-color: #2e3240;
+    border: 1px solid #abafbd;
     border-radius: 8px;
     padding: 20px 20px 40px 20px;
 }
@@ -137,7 +174,7 @@
     color: white;
     padding: 0 4px 12px 4px;
     margin: 0;
-    border-bottom: 1px solid #474B59;
+    border-bottom: 1px solid #474b59;
     font-size: 24px;
 }
 
