--- a/src/styles/MONITORING.css
+++ b/src/styles/MONITORING.css
@@ -27,7 +27,17 @@
 .node-detail-card > div > table > thead > tr > th {
     color: #ffffff;
     border-bottom: 0;
-    background: #767676;
+    background: #222634;
+    font-size: 10px;
+    padding: 8px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.moni-dashboard-nodes > div > table > thead > tr > th {
+    color: #ffffff;
+    border-bottom: 0;
+    background: #222634;
 }
 
 .node-detail-card > div > table > tbody > tr > th {
@@ -92,10 +102,6 @@
     flex-direction: column;
     align-items: center;
     font-size: 20px;
-}
-
-.cluster-list-header, .cluster-list {
-    max-width: 1200px;
 }
 
 .cluster-list-header {
@@ -182,14 +188,13 @@
 /* dashboard-page */
 .dashboard-page {
     box-sizing: border-box;
-    position: fixed;
-    top: 67px;
-    left: 0;
-    width: 100%;
-    height: 100%;
     background: #606472;
     display: grid;
     grid-template-columns: 240px auto;
+    overflow: auto;
+    top: 68px;
+    position: fixed;
+    width: 100vw;
 }
 
 .monitoring-nav {
@@ -197,6 +202,7 @@
     padding: 32px 16px;
     color: white;
     font-size: 16px;
+    width: 200px;
 }
 
 .monitoring-nav .MuiList-root {
@@ -229,12 +235,11 @@
 }
 
 .monitoring-content {
-    max-width: 1080px;
     padding: 32px;
     display: flex;
     flex-direction: column;
     gap: 40px;
-    height: 100%;
+    overflow: auto;
 }
 
 .monitoring-content .title {
@@ -251,7 +256,6 @@
     flex-wrap: wrap;
     flex-direction: column;
     align-items: flex-start;
-    
 }
 
 .chart-container {
