fix: 네비바 수정 모니터링 내부 네비바 수정 필요

--- a/src/styles/MONITORING.css
+++ b/src/styles/MONITORING.css
@@ -243,9 +243,34 @@
     width: 200px;
 }
 
+.monitoring-nav .menu-bar .MuiListItemText-root {
+    padding: 0;
+}
+
+.MuiMenu-paper {
+    width: 200px !important;
+    background: #dfe0e9 !important;
+    color: #2e3240 !important;
+}
+
 .monitoring-nav .MuiList-root {
     margin: 0;
-    padding: 0;
+    padding: 0;   
+}
+
+.monitoring-nav .menu-bar .MuiListItemButton-root {
+    border-left: solid 3px white !important;
+    margin-bottom: 5px;
+}
+
+.monitoring-nav .MuiList-root > div > div > span {
+    color: rgb(33, 237, 255) !important;
+    font-size: 24px;
+}
+
+.monitoring-nav .MuiList-root > div > div > p {
+    color: rgb(180, 180, 180) !important;
+    font-size: 12px;
 }
 
 .monitoring-nav .MuiTypography-root {
