--- a/src/styles/MONITORING.css
+++ b/src/styles/MONITORING.css
@@ -131,7 +131,7 @@
     position: fixed;
     top: 67px;
     left: 0;
-    width: 100%;
+    width: 100vw;
     height: 100%;
     padding: 40px 100px;
     margin: 0;
@@ -186,7 +186,7 @@
     height: 60px;
     color: white;
     justify-content: space-between;
-    align-items: center;
+    align-items: left;
     font-size: 16px;
     font-weight: lighter;
 }
