--- a/src/styles/MONITORING.css
+++ b/src/styles/MONITORING.css
@@ -214,11 +214,11 @@
     box-sizing: border-box;
     list-style: none;
     display: grid;
-    grid-template-columns: 5fr 3fr 3fr 1fr;
+    grid-template-columns: 3fr 5fr 2fr 1fr 1fr;
     padding: 16px;
     height: 60px;
     color: white;
-    justify-content: space-between;
+    align-items: center;
     align-items: left;
     font-size: 16px;
     font-weight: lighter;
@@ -239,7 +239,7 @@
 
 .cluster-list li span {
     font-weight: bolder;
-    text-align: center;
+    /* text-align: center; */
 }
 
 .cluster-list li span:first-child {
