fix: Workload list 디자인 수정

--- a/src/styles/MONITORING.css
+++ b/src/styles/MONITORING.css
@@ -399,3 +399,11 @@
 .apexcharts-graphical {
     display: block;
 }
+
+.dashboard-content {
+    display: flex;
+    gap: 40px;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: flex-start;
+}
