--- a/src/styles/MONITORING.css
+++ b/src/styles/MONITORING.css
@@ -402,8 +402,7 @@
 
 .dashboard-content {
     display: flex;
-    gap: 40px;
-    flex-wrap: wrap;
     flex-direction: column;
-    align-items: flex-start;
+    gap: 40px;
+    width: 79vw;
 }
