--- a/src/styles/CD.css
+++ b/src/styles/CD.css
@@ -1,10 +1,16 @@
+/* Build Setting Page */
+.build-setting {
+    width: 100%;
+    padding: 20px 100px;
+}
+/* Repo List page */
 .repo-list-page {
     box-sizing: border-box;
     position: fixed;
     top: 67px;
     left: 0;
     width: 100vw;
-    height: 100%;
+    height: calc(100vh - 67px); 
     padding: 40px 100px;
     margin: 0;
     background: #2e3240;
@@ -12,6 +18,7 @@
     flex-direction: column;
     align-items: center;
     font-size: 20px;
+    overflow: auto;
 }
 
 .repo-list-header {
