fix: Monitoring nav bar 스크롤 가능 & 스크롤 바 보이지 않게 수정

--- a/src/styles/MONITORING.css
+++ b/src/styles/MONITORING.css
@@ -259,7 +259,12 @@
     color: white;
     font-size: 16px;
     width: 200px;
-    overflow: hidden;
+    overflow: auto;
+    scrollbar-width: none;
+}
+
+.monitoring-nav::-webkit-scrollbar {
+    display: none; /* 스크롤바 숨기기 */
 }
 
 .monitoring-nav .menu-bar .MuiListItemText-root {
