--- a/src/styles/MONITORING.css
+++ b/src/styles/MONITORING.css
@@ -42,6 +42,7 @@
 
 .moni-workloads-table{
     width: calc(100vw / 100 * 77);
+    min-width: 100%;
 }
 
 .moni-workloads-table > div > table > thead > tr > th:first-child {
@@ -258,7 +259,12 @@
     color: white;
     font-size: 16px;
     width: 200px;
-    overflow: hidden;
+    overflow: auto;
+    scrollbar-width: none;
+}
+
+.monitoring-nav::-webkit-scrollbar {
+    display: none; /* 스크롤바 숨기기 */
 }
 
 .monitoring-nav .menu-bar .MuiListItemText-root {
