--- a/src/styles/MONITORING.css
+++ b/src/styles/MONITORING.css
@@ -130,10 +130,6 @@
 
 /* Nodes */
 
-.moni-dashboard-nodes{
-    width: calc(100vw / 100 * 77);
-}
-
 .moni-dashboard-nodes > div > table > thead > tr > th:first-child {
     border-radius: 5px 0 0 5px;
 }
@@ -327,6 +323,7 @@
     flex-direction: column;
     gap: 40px;
     overflow: auto;
+    min-width: 1100px;
 }
 
 .monitoring-content .title {
