--- a/src/styles/DASHBOARD.css
+++ b/src/styles/DASHBOARD.css
@@ -1,28 +1,12 @@
+.apexcharts-tooltip {
+    background: #ffffff;
+    color: black;
+}
+
 .bills-table {
     background: rgba(0, 0, 0, 0.1);
     border-radius: 10px;
 }
-
-/*.bills-table > div > table > thead > tr > th {*/
-/*    padding-top: 10px;*/
-/*    padding-bottom: 10px;*/
-/*}*/
-
-/*.bills-table > div > table > thead > tr > th:first-child {*/
-/*    border-radius: 10px 0 0 0;*/
-/*    padding-left: 20px;*/
-/*}*/
-
-/*.bills-table > div > table > thead > tr > th:last-child {*/
-/*    border-radius: 0 10px 0 0;*/
-/*}*/
-
-/*.bills-table > div > table > thead > tr > th {*/
-/*    color: #ffffff;*/
-/*    border-bottom: 0;*/
-/*    background: rgba(0, 0, 0, 0.3);*/
-/*    font-size: 11px;*/
-/*}*/
 
 .bills-table > div > table > tbody > tr > th {
     color: #dde1ef !important;
