--- a/src/styles/MONITORING.css
+++ b/src/styles/MONITORING.css
@@ -1,3 +1,8 @@
+.apexcharts-tooltip {
+    background: #ffffff;
+    color: black;
+}
+
 /* node chart */
 .chart-container-node {
     /* background-color: rgb(77, 80, 94); */
