fix: Monitoring UsageLineChart toolbar 폰트 색 검정색으로 고정 & Controller Detail에서 Pod 클릭하면 Pod Detail로 이동

--- a/src/styles/MONITORING.css
+++ b/src/styles/MONITORING.css
@@ -3,6 +3,11 @@
     color: black;
 }
 
+.apexcharts-menu {
+    background: #ffffff;
+    color: black;
+}
+
 /* node chart */
 .chart-container-node {
     /* background-color: rgb(77, 80, 94); */
