--- a/src/styles/MONITORING.css
+++ b/src/styles/MONITORING.css
@@ -8,6 +8,132 @@
     color: black;
 }
 
+/* token */
+.token-container {
+    display: flex;
+    min-width: 1000px;
+    gap: 20px;
+    /*width: max-content;*/
+}
+
+.token-steps {
+    margin: 30px;
+    width: 360px;
+    min-width: 360px;
+}
+
+.token-step {
+    width: 320px;
+    height: 80px;
+    background: #ABAFBD;
+    border-radius: 40px;
+    padding: 0 7px;
+    box-sizing: border-box;
+    margin: 10px 0;
+    text-align: left;
+    transition: all 0.8s;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    color: #e5e5e5;
+}
+
+.token-step:focus {
+    outline: none;
+    border: none;
+}
+
+.token-step-id {
+    font-size: 2.5rem;
+    margin-right: 10px;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 70px;
+    height: 70px;
+    border-radius: 100px;
+    background: rgba(0, 0, 0, 0.2);
+}
+
+.token-step-title {
+    font-size: 1rem;
+}
+
+.token-step.current-step {
+    background: #26c0f5;
+    transform: translateX(50px);
+    transition: all 0.5s;
+    color: white;
+}
+
+.token-step.current-step > .token-step-title {
+    font-size: 1.1rem;
+    font-weight: bold;
+    transition: all 0.5s;
+}
+
+.token-content {
+    width: 65%;
+    padding: 10px;
+    margin: 15px;
+    box-sizing: border-box;
+}
+
+.token-box {
+    background: #2e3240;
+    padding: 20px;
+    outline: 1px solid #abafbd;
+    border-radius: 10px;
+    margin: 15px;
+}
+
+.token-content-title {
+    display: flex;
+    font-size: 1.8rem;
+    padding: 5px;
+    margin: 5px;
+    color: white;
+}
+
+.token-content-desc {
+    display: block;
+    color: #888d9f;
+    padding: 0 5px;
+    margin: 0 5px;
+}
+
+.token-content-desc b {
+    color: white;
+}
+
+.step-move-button {
+    width: 100px;
+    height: 40px;
+    border-radius: 25px;
+    color: #ffffff;
+    font-size: 1rem;
+}
+
+.step-move-button.prev{
+    background: #fd8a56;
+}
+
+.step-move-button.next{
+    background: #26c0f5;
+}
+
+.step-move-button:disabled {
+    color: #e5e5e5;
+    background: #ABAFBD;
+}
+
+.step-move-button:disabled {
+    cursor: default;
+    outline: none;
+    border: none;
+}
+
 /* node chart */
 .chart-container-node {
     /* background-color: rgb(77, 80, 94); */
